--- a/ArcaneCalculator.ipynb
+++ b/ArcaneCalculator.ipynb
@@ -17,6 +17,15 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "Note: all calculations assume the 1.1x boost is activated."
+      ],
+      "metadata": {
+        "id": "Ov8ECsIEfdlp"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "'''probability of getting at least x XP in y minutes (assuming a message is sent every minute)'''\n",
@@ -70,7 +79,7 @@
         },
         "outputId": "b0b38ba8-774b-4b3e-fae2-ca72098d4ee6"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -105,6 +114,7 @@
         "    return np.sum(np.array([p[i] for i in list(p) if i >= XP]))\n",
         "\n",
         "def outputMinutes(XP: int) -> None:\n",
+        "    print(f'The minimum number of minutes to gain {XP} XP, assuming average luck, is {ceil(XP/30.25)}.')\n",
         "    minutes95 = 1\n",
         "    minutes99 = 1\n",
         "    minutes999 = 1\n",
@@ -138,7 +148,6 @@
         "    if XP == 0:\n",
         "        break\n",
         "\n",
-        "    print(f'The minimum number of minutes to gain {XP} XP, assuming average luck, is {ceil(XP/30.25)}.')\n",
         "    outputMinutes(XP)"
       ],
       "metadata": {
@@ -146,9 +155,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pVDh4jQjUVTf",
-        "outputId": "d6dfee88-5df0-4f65-cba2-d8f512451769"
+        "outputId": "a765175f-4d49-49ee-9472-74d9b4d27d9a"
       },
-      "execution_count": 5,
+      "execution_count": 1,
       "outputs": [
         {
           "name": "stdout",
