--- a/ArcaneCalculator.ipynb
+++ b/ArcaneCalculator.ipynb
@@ -38,8 +38,8 @@
         "    for i in range(numMinutes-1):\n",
         "        dist = convolve(dist, np.full((26,),1/26))\n",
         "    p = dict(zip(range(numMinutes, numMinutes + len(dist)),dist))\n",
-        "    p = dict(zip(tuple(np.rint(1.1*(14*numMinutes+np.array(list(p))))),p.values()))\n",
-        "    return np.sum(np.array([p[i] for i in list(p) if i >= XP]))\n",
+        "    p = dict(zip(tuple(np.rint(1.1*(14*numMinutes+np.asarray(list(p))))),p.values()))\n",
+        "    return np.sum(np.asarray([p[i] for i in list(p) if i >= XP]))\n",
         "\n",
         "while True:\n",
         "    numMinutes = -1\n",
@@ -77,9 +77,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b0b38ba8-774b-4b3e-fae2-ca72098d4ee6"
+        "outputId": "36519113-b538-4d01-9d3d-d5df30a8569a"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "name": "stdout",
@@ -110,8 +110,8 @@
         "    for i in range(numMinutes-1):\n",
         "        dist = convolve(dist, np.full((26,),1/26))\n",
         "    p = dict(zip(range(numMinutes, numMinutes + len(dist)),dist))\n",
-        "    p = dict(zip(tuple(np.rint(1.1*(14*numMinutes+np.array(list(p))))),p.values()))\n",
-        "    return np.sum(np.array([p[i] for i in list(p) if i >= XP]))\n",
+        "    p = dict(zip(tuple(np.rint(1.1*(14*numMinutes+np.asarray(list(p))))),p.values()))\n",
+        "    return np.sum(np.asarray([p[i] for i in list(p) if i >= XP]))\n",
         "\n",
         "def outputMinutes(XP: int) -> None:\n",
         "    print(f'The minimum number of minutes to gain {XP} XP, assuming average luck, is {ceil(XP/30.25)}.')\n",
@@ -157,7 +157,7 @@
         "id": "pVDh4jQjUVTf",
         "outputId": "a765175f-4d49-49ee-9472-74d9b4d27d9a"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
